--- a/app/views/emprestimos/_emprestimo.html.erb
+++ b/app/views/emprestimos/_emprestimo.html.erb
@@ -1,27 +1,42 @@
-<div id="<%= dom_id emprestimo %>">
-  <p>
-    <strong>Livro:</strong>
-    <%= emprestimo.livro_id %>
-  </p>
+<div class="container mt-4">
+  <h1 class="mb-4">Detalhes do Empréstimo</h1>
 
-  <p>
-    <strong>Usuario:</strong>
-    <%= emprestimo.usuario_id %>
-  </p>
+  <div class="card shadow-sm mb-4">
+    <div class="card-body">
+      <div class="mb-3">
+        <strong>Livro:</strong>
+        <p class="mb-0"><%= emprestimo.livro_id %></p>
+      </div>
 
-  <p>
-    <strong>Data emprestimo:</strong>
-    <%= emprestimo.data_emprestimo %>
-  </p>
+      <div class="mb-3">
+        <strong>Usuário:</strong>
+        <p class="mb-0"><%= emprestimo.usuario_id %></p>
+      </div>
 
-  <p>
-    <strong>Data devolucao prevista:</strong>
-    <%= emprestimo.data_devolucao_prevista %>
-  </p>
+      <div class="mb-3">
+        <strong>Data do Empréstimo:</strong>
+        <p class="mb-0"><%= emprestimo.data_emprestimo %></p>
+      </div>
 
-  <p>
-    <strong>Data devolucao real:</strong>
-    <%= emprestimo.data_devolucao_real %>
-  </p>
+      <div class="mb-3">
+        <strong>Data de Devolução Prevista:</strong>
+        <p class="mb-0"><%= emprestimo.data_devolucao_prevista %></p>
+      </div>
 
+      <div class="mb-3">
+        <strong>Data de Devolução Real:</strong>
+        <p class="mb-0"><%= emprestimo.data_devolucao_real %></p>
+      </div>
+    </div>
+  </div>
+
+  <div class="d-flex justify-content-between">
+    <div>
+      <%= link_to "Voltar para empréstimos", emprestimos_path, class: "btn btn-secondary btn-sm" %>
+    </div>
+    <div>
+      <%= link_to "Editar este empréstimo", edit_emprestimo_path(emprestimo), class: "btn btn-warning btn-sm" %>
+    </div>
+    
+  </div>
 </div>
