--- a/app/views/emprestimos/_form.html.erb
+++ b/app/views/emprestimos/_form.html.erb
@@ -1,8 +1,7 @@
 <%= form_with(model: emprestimo) do |form| %>
   <% if emprestimo.errors.any? %>
-    <div style="color: red">
-      <h2><%= pluralize(emprestimo.errors.count, "error") %> prohibited this emprestimo from being saved:</h2>
-
+    <div class="alert alert-danger">
+      <h2><%= pluralize(emprestimo.errors.count, "erro") %> impediram este empréstimo de ser salvo:</h2>
       <ul>
         <% emprestimo.errors.each do |error| %>
           <li><%= error.full_message %></li>
@@ -11,32 +10,32 @@
     </div>
   <% end %>
 
-  <div>
-    <%= form.label :livro_id, style: "display: block" %>
-    <%= form.text_field :livro_id %>
+  <div class="mb-3">
+    <%= form.label :livro_id, class: "form-label" %>
+    <%= form.text_field :livro_id, class: "form-control" %>
+  </div>
+
+  <div class="mb-3">
+    <%= form.label :usuario_id, class: "form-label" %>
+    <%= form.text_field :usuario_id, class: "form-control" %>
+  </div>
+
+  <div class="mb-3">
+    <%= form.label :data_emprestimo, class: "form-label" %>
+    <%= form.date_field :data_emprestimo, class: "form-control" %>
+  </div>
+
+  <div class="mb-3">
+    <%= form.label :data_devolucao_prevista, class: "form-label" %>
+    <%= form.date_field :data_devolucao_prevista, class: "form-control" %>
+  </div>
+
+  <div class="mb-3">
+    <%= form.label :data_devolucao_real, class: "form-label" %>
+    <%= form.date_field :data_devolucao_real, class: "form-control" %>
   </div>
 
   <div>
-    <%= form.label :usuario_id, style: "display: block" %>
-    <%= form.text_field :usuario_id %>
-  </div>
-
-  <div>
-    <%= form.label :data_emprestimo, style: "display: block" %>
-    <%= form.date_field :data_emprestimo %>
-  </div>
-
-  <div>
-    <%= form.label :data_devolucao_prevista, style: "display: block" %>
-    <%= form.date_field :data_devolucao_prevista %>
-  </div>
-
-  <div>
-    <%= form.label :data_devolucao_real, style: "display: block" %>
-    <%= form.date_field :data_devolucao_real %>
-  </div>
-
-  <div>
-    <%= form.submit %>
+    <%= form.submit "Salvar Empréstimo", class: "btn btn-primary" %>
   </div>
 <% end %>
