--- a/app/views/emprestimos/edit.html.erb
+++ b/app/views/emprestimos/edit.html.erb
@@ -1,10 +1,13 @@
-<h1>Editing emprestimo</h1>
+<div class="container">
+<h1>Editing Empréstimo</h1>
 
 <%= render "form", emprestimo: @emprestimo %>
 
 <br>
 
 <div>
-  <%= link_to "Show this emprestimo", @emprestimo %> |
-  <%= link_to "Back to emprestimos", emprestimos_path %>
+  <%= link_to "Show this empréstimo", @emprestimo, class: "btn btn-info" %> |
+  <%= link_to "Back to empréstimos", emprestimos_path, class: "btn btn-secondary" %>
+</div>
+
 </div>
