--- a/app/views/emprestimos/new.html.erb
+++ b/app/views/emprestimos/new.html.erb
@@ -1,9 +1,12 @@
-<h1>New emprestimo</h1>
+<div class="container">
+<h1>Criar Novo Empréstimo</h1>
 
 <%= render "form", emprestimo: @emprestimo %>
 
 <br>
 
-<div>
-  <%= link_to "Back to emprestimos", emprestimos_path %>
+<div class="mt-3">
+  <%= link_to "Voltar para os empréstimos", emprestimos_path, class: "btn btn-secondary" %>
+</div>
+
 </div>
