--- a/app/views/livros/new.html.erb
+++ b/app/views/livros/new.html.erb
@@ -1,9 +1,13 @@
-<h1>New livro</h1>
+<div class="container mt-4">
+  <h1 class="mb-4">Novo Livro</h1>
 
-<%= render "form", livro: @livro %>
+  <div class="card shadow-sm">
+    <div class="card-body">
+      <%= render "form", livro: @livro %>
+    </div>
+  </div>
 
-<br>
-
-<div>
-  <%= link_to "Back to livros", livros_path %>
+  <div class="mt-4">
+    <%= link_to "Voltar para a lista de livros", livros_path, class: "btn btn-secondary" %>
+  </div>
 </div>
