--- a/app/views/perfils/_form.html.erb
+++ b/app/views/perfils/_form.html.erb
@@ -1,9 +1,10 @@
-<%= form_with(model: perfil) do |form| %>
+<%= form_with(model: perfil, class: "needs-validation") do |form| %>
   <% if perfil.errors.any? %>
-    <div style="color: red">
-      <h2><%= pluralize(perfil.errors.count, "error") %> prohibited this perfil from being saved:</h2>
-
-      <ul>
+    <div class="alert alert-danger">
+      <h4 class="alert-heading">
+        <%= pluralize(perfil.errors.count, "erro") %> impediram o salvamento do perfil:
+      </h4>
+      <ul class="mb-0">
         <% perfil.errors.each do |error| %>
           <li><%= error.full_message %></li>
         <% end %>
@@ -11,17 +12,17 @@
     </div>
   <% end %>
 
-  <div>
-    <%= form.label :nome, style: "display: block" %>
-    <%= form.text_field :nome %>
+  <div class="mb-3">
+    <%= form.label :nome, class: "form-label" %>
+    <%= form.text_field :nome, class: "form-control" %>
   </div>
 
-  <div>
-    <%= form.label :descricao, style: "display: block" %>
-    <%= form.text_field :descricao %>
+  <div class="mb-3">
+    <%= form.label :descricao, class: "form-label" %>
+    <%= form.text_field :descricao, class: "form-control" %>
   </div>
 
-  <div>
-    <%= form.submit %>
+  <div class="mt-3">
+    <%= form.submit "Salvar", class: "btn btn-primary" %>
   </div>
 <% end %>
