--- a/app/views/perfils/edit.html.erb
+++ b/app/views/perfils/edit.html.erb
@@ -1,10 +1,14 @@
-<h1>Editing perfil</h1>
+<div class="container mt-4">
+  <h1 class="mb-4">Editar Perfil</h1>
 
-<%= render "form", perfil: @perfil %>
+  <div class="card shadow-sm mb-4">
+    <div class="card-body">
+      <%= render "form", perfil: @perfil %>
+    </div>
+  </div>
 
-<br>
-
-<div>
-  <%= link_to "Show this perfil", @perfil %> |
-  <%= link_to "Back to perfils", perfils_path %>
+  <div class="d-flex gap-3">
+    <%= link_to "Ver este perfil", @perfil, class: "btn btn-primary" %>
+    <%= link_to "Voltar para perfis", perfils_path, class: "btn btn-secondary" %>
+  </div>
 </div>
