--- a/app/views/perfils/new.html.erb
+++ b/app/views/perfils/new.html.erb
@@ -1,9 +1,11 @@
-<h1>New perfil</h1>
+<div class="container mt-4">
+  <h1 class="mb-4">Novo Perfil</h1>
 
-<%= render "form", perfil: @perfil %>
+  <div class="card shadow-sm mb-4">
+    <div class="card-body">
+      <%= render "form", perfil: @perfil %>
+    </div>
+  </div>
 
-<br>
-
-<div>
-  <%= link_to "Back to perfils", perfils_path %>
+  <%= link_to "Voltar para perfis", perfils_path, class: "btn btn-secondary" %>
 </div>
