--- a/app/views/usuarios/_form.html.erb
+++ b/app/views/usuarios/_form.html.erb
@@ -1,8 +1,9 @@
-<%= form_with(model: usuario) do |form| %>
+<%= form_with(model: usuario, class: "needs-validation") do |form| %>
   <% if usuario.errors.any? %>
-    <div style="color: red">
-      <h2><%= pluralize(usuario.errors.count, "error") %> prohibited this usuario from being saved:</h2>
-
+    <div class="alert alert-danger">
+      <h4 class="alert-heading">
+        <%= pluralize(usuario.errors.count, "erro") %> impediram este usuário de ser salvo:
+      </h4>
       <ul>
         <% usuario.errors.each do |error| %>
           <li><%= error.full_message %></li>
@@ -11,22 +12,22 @@
     </div>
   <% end %>
 
-  <div>
-    <%= form.label :nome, style: "display: block" %>
-    <%= form.text_field :nome %>
+  <div class="mb-3">
+    <%= form.label :nome, class: "form-label" %>
+    <%= form.text_field :nome, class: "form-control" %>
   </div>
 
-  <div>
-    <%= form.label :email, style: "display: block" %>
-    <%= form.text_field :email %>
+  <div class="mb-3">
+    <%= form.label :email, class: "form-label" %>
+    <%= form.email_field :email, class: "form-control" %>
   </div>
 
-  <div>
-    <%= form.label :telefone, style: "display: block" %>
-    <%= form.text_field :telefone %>
+  <div class="mb-3">
+    <%= form.label :telefone, class: "form-label" %>
+    <%= form.telephone_field :telefone, class: "form-control" %>
   </div>
 
-  <div>
-    <%= form.submit %>
+  <div class="mt-3">
+    <%= form.submit "Salvar", class: "btn btn-primary" %>
   </div>
 <% end %>
