--- a/app/views/usuarios/_usuario.html.erb
+++ b/app/views/usuarios/_usuario.html.erb
@@ -1,17 +1,13 @@
-<div id="<%= dom_id usuario %>">
-  <p>
-    <strong>Nome:</strong>
-    <%= usuario.nome %>
-  </p>
+<div id="<%= dom_id usuario %>" class="card mb-4 shadow-sm">
+  <div class="card-body">
+    <h5 class="card-title mb-3"><%= usuario.nome %></h5>
 
-  <p>
-    <strong>Email:</strong>
-    <%= usuario.email %>
-  </p>
+    <p class="card-text mb-1">
+      <strong>Email:</strong> <%= usuario.email %>
+    </p>
 
-  <p>
-    <strong>Telefone:</strong>
-    <%= usuario.telefone %>
-  </p>
-
+    <p class="card-text">
+      <strong>Telefone:</strong> <%= usuario.telefone %>
+    </p>
+  </div>
 </div>
