--- a/app/views/usuarios/edit.html.erb
+++ b/app/views/usuarios/edit.html.erb
@@ -1,10 +1,14 @@
-<h1>Editing usuario</h1>
+<div class="container mt-4">
+  <h1 class="mb-4">Editar Usuário</h1>
 
-<%= render "form", usuario: @usuario %>
+  <div class="card shadow-sm mb-4">
+    <div class="card-body">
+      <%= render "form", usuario: @usuario %>
+    </div>
+  </div>
 
-<br>
-
-<div>
-  <%= link_to "Show this usuario", @usuario %> |
-  <%= link_to "Back to usuarios", usuarios_path %>
+  <div class="d-flex gap-2">
+    <%= link_to "Ver este usuário", @usuario, class: "btn btn-outline-primary" %>
+    <%= link_to "Voltar para usuários", usuarios_path, class: "btn btn-secondary" %>
+  </div>
 </div>
