--- a/app/views/usuarios/new.html.erb
+++ b/app/views/usuarios/new.html.erb
@@ -1,9 +1,13 @@
-<h1>New usuario</h1>
+<div class="container mt-4">
+  <h1 class="mb-4">Novo Usuário</h1>
 
-<%= render "form", usuario: @usuario %>
+  <div class="card shadow-sm mb-4">
+    <div class="card-body">
+      <%= render "form", usuario: @usuario %>
+    </div>
+  </div>
 
-<br>
-
-<div>
-  <%= link_to "Back to usuarios", usuarios_path %>
+  <div>
+    <%= link_to "Voltar para usuários", usuarios_path, class: "btn btn-secondary" %>
+  </div>
 </div>
